Version NEXT
============

:Released: FUTURE
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Set orientation RightHanded if not specified.


Version 0.8
===========

:Released: 2013-09-21
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Use multisize cursors.


Version 0.7.4
=============

:Released: 2012-08-13
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Switch from deprecated ‘rsvg(1)’ to ‘rsvg-convert(1)’.


Version 0.7.3
=============

:Released: 2011-09-13
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Updated documentation for building custom themes.

* Expand shell wildcards in rule dependencies.


Version 0.7.2
=============

:Released: 2011-02-26
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Added all missing cursor links from Qt4 documentation.


Version 0.7.1
=============

:Released: 2010-10-16
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Added Qt4 cursor links


Version 0.7
===========

:Released: 2010-06-03
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Licence changed to GPLv3.

* Uninstallation of current/custom/all cursors from sources.

* Render images using ‘rsvg’ (faster than Inkscape).

* Generate animation frames from starting image using SVG transform
  attributes (not ‘patch’).

* Easier to customise install location.

* Maintainability improvements of build system and programs.

* Include “Opaque” and “Left Handed” alternatives in primary source
  package.


Version 0.6.1
=============

:Released: 2009-11-02
:Maintainer: Jens Luetkens <j.luetkens@limitland.de>

* Fix install script to process all files correctly.


Version 0.6.0
=============

:Released: 2009-06-19
:Maintainer: Jens Luetkens <j.luetkens@endiancode.de>

* License changed to LGPLv3.

* Added red cursors.

* Fix some firefox cursor hashes (thanx to tks).


Version 0.5.1
=============

:Released: 2008-05-28
:Maintainer: Jens Luetkens <j.luetkens@endiancode.de>

* Progress animation expanded to 24 frames.
