@@ -31,7 +31,7 @@ bindir="$(dirname $0)"/bin
 ICONSDIR=${ICONSDIR:-~/.icons}
 export ICONSDIR
 
-# We want to use cursors with multiple sizes combined. 
+# We want to use cursors with multiple sizes combined.
 export MULTISIZE=1
 
 # argument processing and usage
@@ -69,20 +69,29 @@ function build_theme {
     # Build the cursors for a particular theme.
     THEMENAME="$1"
 
-    destdir="${ICONSDIR}/${themename_stem}-${THEMENAME}"
-    if [ -d "${destdir}" ]; then
-        rm -r "${destdir}"
-    fi
-
     export THEMENAME
     if [ $UNINSTALL ]; then
         make uninstall
     else
-        printf "\nBuilding \"${THEMEOPTIONS}${THEMENAME}\":\n\n"
+        printf "\nBuilding \"${THEMENAME}${THEMEOPTIONS}${THEMEINCLUDE}\":\n\n"
         "${bindir}"/build-cursors
         make
         make install
     fi
+}
+
+function build_include_theme {
+    themename="$1"
+
+    # build the right-handed version
+    export ORIENTATION="RightHanded"
+    export THEMEOPTIONS=""
+    build_theme "$themename"
+
+    # also build the left-handed version
+    export ORIENTATION="LeftHanded"
+    export THEMEOPTIONS="-LH"
+    build_theme "$themename"
 }
 
 for configfile in "${configfile_dir}"/*.CONFIG ; do
@@ -93,14 +102,16 @@ for configfile in "${configfile_dir}"/*.CONFIG ; do
         # The template isn't a theme we want to build.
         continue
     fi
-    
-    # build the right-handed version
-    export ORIENTATION="RightHanded"
-    export THEMEOPTIONS=""
-    build_theme "$themename"
 
-    # also build the left-handed version
-    export ORIENTATION="LeftHanded"
-    export THEMEOPTIONS="LH-"
-    build_theme "$themename"
+    unset THEMEINCLUDE
+    build_include_theme "$themename"
+
+    for includefile in "${configfile_dir}"/*.INCLUDE ; do
+        includefile_name=$(basename "$includefile")
+        export THEMEINCLUDE="-${includefile_name%.INCLUDE}"
+        build_include_theme "$themename"
+    done
+
 done
+
+exit 0
